--- a/001/piKachu2.html
+++ b/001/piKachu2.html
@@ -32,7 +32,9 @@
 	</div>
 
 	<div class="actions">
-
+		<button data-speed="slow">慢速</button>
+		<button data-speed="normal" class="active">中速</button>
+		<button data-speed="fast">快速</button>
 	</div>
 	<script src="vendors/jquery.min.js"></script>
 	<script src="./piKachu.js"></script>
